# mantidsExamples30

./: .gitignore  CMakeLists.txt
WEB/: CMakeLists.txt  api_endpoints_llm_context.cpp.txt
WEB/m3t_restserver_helloworld/: CMakeLists.txt
WEB/m3t_restserver_helloworld/etc/m3t_restserver_helloworld/: webserver.conf
WEB/m3t_restserver_helloworld/src/: config.h.in  main.cpp
WEB/m3t_restserver_helloworld/var/www/: README.md  package.json
WEB/m3t_restserver_helloworld/var/www/webroot/: index.html  resources.conf
WEB/m3t_restserver_loggedin/etc/m3t_restserver_loggedin/: webserver.conf
WEB/m3t_restserver_loggedin/src/: main.cpp
WEB/m3t_restserver_loggedin/var/www/webroot/: index.html
WEB/m3t_restserver_messageboard/: CMakeLists.txt
WEB/m3t_restserver_messageboard/etc/m3t_restserver_messageboard/: webserver.conf
WEB/m3t_restserver_messageboard/src/: api_endpoints_llm.cpp.txt  dbinit.cpp  dbinit.h  main.cpp
WEB/m3t_restserver_messageboard/src/definitions/: accesscontrol.h  context.h  database.h
WEB/m3t_restserver_messageboard/src/endpoints/: api.cpp  api.h
WEB/m3t_restserver_messageboard/var/www/webroot/: index.html
