cmake_minimum_required(VERSION 3.10)

##############################################################################################################################
# Vars and Versions:
set(SVERSION 3.0.0)

set(PROJECT_HOMEPAGE_URL "https://github.com/unmanarc/mantidsExamples30")
set(PROJECT_LICENSE "LGPLv3")
set(PROJECT_AUTHOR_NAME "Aaron G. Mizrachi P.")
set(PROJECT_AUTHOR_MAIL "dev@unmanarc.com")

##############################################################################################################################

##############################################################################################################################
# C++ Global Options Settings:
set(CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS YES CACHE BOOL "Export all symbols")
##############################################################################################################################

##############################################################################################################################
# Project Settings:
project(mantidsExamples30)
project(${PROJECT_NAME} VERSION ${SVERSION} DESCRIPTION "libMantids30 Examples")
##############################################################################################################################

##############################################################################################################################
# Other CMake Global settings:
include(GNUInstallDirs)
##############################################################################################################################

#############################################################################################################################
# Subprojects:
#ADD_SUBDIRECTORY(APP)
#ADD_SUBDIRECTORY(RPC)
ADD_SUBDIRECTORY(WEB)

#############################################################################################################################

